1.5.8
-----
1. Reduce inline image margins.
2. Query server for library name each time dialog is open, so that we catch any
   changes.

1.5.7
-----
1. Don't use a constant for library name, fetch via JSONRPC call.

1.5.6
-----
 1. If current item has a 'remote_title' element and its id is negative, then
    allow title (or remote_title) and artist/composer to span up to 3 lines each
    in now-playing.
 2. Revert back to statically.io
 3. Fix size of player status icons (default, sleep, synced).
 4. Fix 'hung' state if close 'Manage players' dialog whilst it has a menu open.
 5. Update vue-virtual-scroller, vue-touch-events, vue-lazyload, and vuex.
 6. Update iOS/iPhone/iPad checks.
 7. Take into account safe-area-inset-bottom for iOS.
 8. Update user-agent checking code in perl code to (hopefully) detect iPadOS
    and serve correct icon.
 9. If '?ios' is added to URL query, add 12px padding to bottom navigation, to
    work-around issue with non-home button iOS devices.
10. Ensure MAI responses are for the current request.
11. Cancelling axios reqests sometimes leads to add behaviour, so instead use
    unique ID for each list request. Instead of cancelling, change ID, so
    'cancelled' response is ignored.
12. Place artist biography pictures on alternating right/left side.
13. Larger dot for jumplist when no letters.
14. Use "track of total" and not "track / total"
15. Increase left/right margin around details on desktop botton bar.
16. Show library name in toolbar title of settings, information, and server
    settings dialogs.

1.5.5
-----
 1. Fix 'Append random album to queue'
 2. Use new 'include_online_only_artists:1' for latest LMS8.
 3. Display volume overlay if change volume via incrementVolume() or
    decrementVolume() fuctions. (These are called by lms-material-app when
    hardware volume buttons are used)
 4. If current item has a 'remote_title' element and no 'album' element, then